other-objects/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman -ingress
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80
    - host: queue.fleetman.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: fleetman-queue
                port:
                  number: 8161
